PBI 01-02: Unit test

--- a/src/app/modules/github/users-component/users-detail/users-detail.component.html
+++ b/src/app/modules/github/users-component/users-detail/users-detail.component.html
@@ -9,7 +9,7 @@
 			<p class="card-text">Description: {{ singleData.description }} </p>
 			<p class="card-text">Forks: {{ singleData.forks }} </p>
 			<p class="card-text">Open Issues: {{ singleData.open_issues }} </p>
-			<p class="card-text">Issues: {{ singleData.forks_count }} </p>
+			<p class="card-text">Issues: {{ singleData.open_issues }} </p>
 		</div>      
 	</div>
 </div>
