--- a/src/app/modules/github/users-component/users-detail/users-detail.component.html
+++ b/src/app/modules/github/users-component/users-detail/users-detail.component.html
@@ -2,9 +2,9 @@
 	Displaying {{ data.length }} Repos.
 </h1>
 <div *ngFor="let singleData of data" class="float-left " >
-	<div class="card bg-light text-center  mx-1 my-1" style="width: 266px;height: 340px;" >
+	<div class="card bg-light text-center  mx-1 my-1 box">
 		<a href="{{singleData.html_url}}" target="_blank" class="card-header">{{singleData.name}}</a>
-		<div class="card-body text-secondary">
+		<div class="card-body text-secondary overflow-auto">
 			<h5 class="card-title">Name:{{singleData.name}}</h5>
 			<p class="card-text">Description: {{ singleData.description }} </p>
 			<p class="card-text">Forks: {{ singleData.forks }} </p>
