--- a/src/app/modules/github/users-component/users.component.less
+++ b/src/app/modules/github/users-component/users.component.less
@@ -1,17 +1,21 @@
-.resizeimg{
-    width: 100px; height: 100px;
-}
-
 .card-horizontal {
     display: flex;
     flex: 1 1 auto;
 }
 
-
 .btn-group .btn-fab{
     position: fixed !important;
     right: 20px;
-  }
-  #main{
+}
+
+.buttonNext{
     bottom: 20px;
-  }
+}
+
+.width-100 {
+	width: 100px;
+}
+
+.height-100 {
+	height: 100px;
+}
